# web-agent

./: .dockerignore  .env.docker  .env.example  .env.production  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  agent_server.py  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  main_server.py  package-lock.json  pyproject.toml  setup.ps1  setup.sh  start-dev.ps1  start-dev.sh  test-start-dev.sh
docs/: IMPLEMENTATION_PLAN.md  ISOLATION_VERIFICATION.md  MULTI_USER_ISOLATION.md  PROJECT_STATUS.md  STARTUP_AND_DEBUG.md  VERIFY_CONTAINER_EXECUTION.md  chatarea-message-flow-analysis.md  claude-agent-sdk-multi-user-architecture.md  code-review-160b116.md  container-mode-analysis.md  continue-plan.md  conversation-to-skill-plan.md  data-directory-analysis.md  database-analysis.md  db-migration-plan-3000.md  evolution-feedback-investigation.md  evolution-mechanisms.md  generated-files-db-sync-issues.md  im-message-flow-implementation-report.md  im-style-message-recovery-plan.md  im-vs-agent-message-flow-comparison.md  jsonl-to-sqlite-migration-design.md  k8s-deployment-plan.md  mcp-support-audit.md  multi-user-data-isolation-vulnerabilities.md  read-tool-analysis.md  requirements.md  session-switching-analysis.md  skill-creation-mechanisms.md  spinner-analysis.md  sqlite-data-migration-plan.md  sqlite-migration-plan.md  system-prompt-design.md  usage-dashboard.md
frontend/: .env.production  index.html  package-lock.json  package.json  sending-demo.html  tool-pairing-demo.html  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
src/: auth.py  (+49 more)
(+323 files in other folders)
