[project]
name = "web-agent"
version = "0.1.0"
description = "Multi-user web agent platform for financial audit, powered by Claude Agent SDK"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "claude-agent-sdk>=0.1.58",
    "docker>=7.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    "pdfplumber>=0.11.9",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "numpy>=2.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
